# nixiestat

./: README.md
code/: CircularBuffer.h  DataLogger.cpp  DataLogger.h  IOPort.cpp  IOPort.h  Makefile  SystemLogger.cpp  SystemLogger.h  TempCycle.cpp  TempCycle.h  UiState.h  UiStateMachine.cpp  clock.cpp  clock.h  datetime.cpp  datetime.h  display.cpp  display.h  ds1307.cpp  ds1307.h  esquare.cpp  esquare.h  mpr121.h  nixiestat-2.cpp  nixiestat.cpp  rtc.h  switches.cpp  switches.h  thermostat.cpp  thermostat.h  ui.cpp  ui.h
code/core/: HardwareSerial.cpp  HardwareSerial.h  OneWire.cpp  OneWire.h  OneWireDevice.h  PID.cpp  PID.h  Print.cpp  Print.h  TempSensors.cpp  TempSensors.h  Wire.cpp  Wire.h  avrdude.conf  menu.cpp  menu.h  pins_arduino.c  ring.cpp  twi.c  twi.h  wiring.c  wiring.cpp  wiring.h  wiring_analog.c  wiring_digital.c  wiring_pulse.c  wiring_serial.c  wiring_shift.c
esp32/code/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.esp32
esp32/code/main/: CMakeLists.txt  CycleData.cpp  CycleData.h  DBGPorts.cpp  DBGPorts.h  IOPorts.cpp  IOPorts.h  SensorData.cpp  SensorData.h  TempCycle.cpp  TempCycle.h  TempSensorThread.cpp  UiState.h  UiStateMachine.cpp  UiStateMachine.h  configuration.cpp  configuration.h  console.cpp  console.h  display.cpp  display.h  mqtt.cpp  mqtt.h  therm_main.cpp  thermostat.cpp  thermostat.h  ui.cpp  ui.h  wifi.cpp  wifi.h
esp32/cpu-board/: IODrivers.sch  cpu-board-cache.lib  cpu-board.kicad_pcb  cpu-board.pro  cpu-board.sch  fp-info-cache
esp32/dev-board/: dev-board-cache.lib  dev-board.kicad_pcb  dev-board.pro  dev-board.sch  fp-info-cache
esp32/dev-board2/: dev-board-cache.lib  dev-board.kicad_pcb  dev-board.pro  dev-board.sch
esp32/nixie-display/: anode_drivers.sch  nixie-display-cache.lib  nixie-display.kicad_pcb  nixie-display.pro  nixie-display.sch  nixie_display_io.sch
esp32/temp_sensor/: CMakeLists.txt  sdkconfig.8266  sdkconfig.old  sdkconfig.s2
esp32/temp_sensor/main/: mqtt.h  (+6 more)
pcb/: PCB.00025046.backup  cpu_board.pcb\  cpu_board.pcb~  display_board.pcb~  nixiestat.pcb-  nixiestat.pcb~
schematics/: nixiestat-cpu.sch  nixiestat-display.sch
webui/: .MQTT.cpp.swp  .MQTT.h.swp  .PingTopicHandler.cpp.swp  .PingTopicHandler.h.swp  .myvimsession.vim  .myvimview.vim  .thermostat_db.sql.swp  .vimsession.vim  .vimview.vim  CMakeLists.txt  DBManager.cpp  DBManager.h  JsonTab.h  LocationTab.cpp  LocationTab.h  LogTopicHandler.cpp  LogTopicHandler.h  MQTT.cpp  MQTT.h  MQTTHandler.h  NixieStatApplication.cpp  NixieStatApplication.h  PingHandler.cpp  PingHandler.h  PingTopicHandler.cpp  PingTopicHandler.h  SubPing.cpp  SubPing.h  SubTemperatures.cpp  SubTemperatures.h  TempTopicHandler.cpp  TempTopicHandler.h  ThreadsafeQueue.h  WtApplication.cpp  WtApplication.h  main.cpp  mqtt_gui.pro  thermostat_db.sql
(+4 files in other folders)
