idf_component_register(SRCS "therm_main.cpp"
                            "TempCycle.cpp"
                            "thermostat.cpp"
                            "IOPorts.cpp"
                            "configuration.cpp"
                            "CycleData.cpp"
                            "display.cpp"
                            "mqtt.cpp"
                            "SensorData.cpp"
                            "TempSensorThread.cpp"
                    INCLUDE_DIRS ".")
